--- a/ios/Travel Safety/Base.lproj/Main.storyboard
+++ b/ios/Travel Safety/Base.lproj/Main.storyboard
@@ -123,6 +123,16 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCV-sy-9Ih" userLabel="Profile Button">
+                                <rect key="frame" x="16" y="30" width="44" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="vCV-sy-9Ih" secondAttribute="height" multiplier="1:1" id="DSO-Pj-rAF"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="profile"/>
+                                <connections>
+                                    <action selector="profileButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6hd-rp-IPk"/>
+                                </connections>
+                            </button>
                             <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VjN-Vn-f9w">
                                 <rect key="frame" x="95" y="175" width="130" height="130"/>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -132,7 +142,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="98h-rt-G3h">
-                                <rect key="frame" x="16" y="30" width="288" height="44"/>
+                                <rect key="frame" x="63" y="30" width="241" height="44"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="VeK-IL-gWu"/>
@@ -164,7 +174,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mrn-cs-KWr">
-                                <rect key="frame" x="129.5" y="400" width="60" height="60"/>
+                                <rect key="frame" x="130" y="400" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Mrn-cs-KWr" secondAttribute="height" multiplier="1:1" id="HEL-Rb-pzw"/>
                                     <constraint firstAttribute="width" constant="60" id="oZh-eC-56o"/>
@@ -187,20 +197,24 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="jf3-IF-SEO" secondAttribute="trailing" constant="20" id="1CP-X0-0vo"/>
+                            <constraint firstItem="0ap-8K-zmu" firstAttribute="leading" secondItem="vCV-sy-9Ih" secondAttribute="leading" id="1bX-lU-ppu"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mX6-7k-N5r" secondAttribute="bottom" id="1wc-lF-Bih"/>
+                            <constraint firstItem="vCV-sy-9Ih" firstAttribute="bottom" secondItem="98h-rt-G3h" secondAttribute="bottom" id="3Ig-lQ-C2L"/>
                             <constraint firstItem="98h-rt-G3h" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="6af-bM-Lqx"/>
                             <constraint firstItem="rqA-B9-fMi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="15" id="FLb-7r-XBS"/>
                             <constraint firstItem="0ap-8K-zmu" firstAttribute="top" secondItem="98h-rt-G3h" secondAttribute="top" id="IPK-4P-3gZ"/>
                             <constraint firstItem="mX6-7k-N5r" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IkD-y7-0Ca"/>
                             <constraint firstItem="mX6-7k-N5r" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="JJ6-1H-2eP"/>
+                            <constraint firstItem="vCV-sy-9Ih" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Jor-mP-4Mw"/>
                             <constraint firstItem="Mrn-cs-KWr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kmd-mc-APU"/>
                             <constraint firstItem="rqA-B9-fMi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="N0s-Md-6WI"/>
+                            <constraint firstItem="rqA-B9-fMi" firstAttribute="leading" secondItem="vCV-sy-9Ih" secondAttribute="leading" id="Onm-Vq-3gu"/>
                             <constraint firstItem="0ap-8K-zmu" firstAttribute="trailing" secondItem="98h-rt-G3h" secondAttribute="trailing" id="Pwn-vR-h18"/>
+                            <constraint firstItem="vCV-sy-9Ih" firstAttribute="top" secondItem="98h-rt-G3h" secondAttribute="top" id="Q3X-oH-HQd"/>
                             <constraint firstItem="rqA-B9-fMi" firstAttribute="leading" secondItem="98h-rt-G3h" secondAttribute="leading" id="QDk-Me-Bld"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="jf3-IF-SEO" secondAttribute="bottom" constant="20" id="Qbv-lZ-gRS"/>
                             <constraint firstItem="0ap-8K-zmu" firstAttribute="leading" secondItem="98h-rt-G3h" secondAttribute="leading" id="Uqb-PC-CuD"/>
                             <constraint firstItem="jf3-IF-SEO" firstAttribute="trailing" secondItem="98h-rt-G3h" secondAttribute="trailing" id="X1f-Pd-Phi"/>
-                            <constraint firstItem="98h-rt-G3h" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="YHn-t9-THT"/>
                             <constraint firstItem="Mrn-cs-KWr" firstAttribute="bottom" secondItem="jf3-IF-SEO" secondAttribute="bottom" id="Yx2-LF-Gis"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rqA-B9-fMi" secondAttribute="bottom" constant="20" id="Z1T-v0-naR"/>
                             <constraint firstAttribute="trailingMargin" secondItem="jf3-IF-SEO" secondAttribute="trailing" constant="15" id="aDH-WY-4fg"/>
@@ -210,6 +224,7 @@
                             <constraint firstItem="jf3-IF-SEO" firstAttribute="bottom" secondItem="rqA-B9-fMi" secondAttribute="bottom" id="gZ8-AL-ZzR"/>
                             <constraint firstItem="98h-rt-G3h" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="kxc-ss-pVO"/>
                             <constraint firstAttribute="trailing" secondItem="mX6-7k-N5r" secondAttribute="trailing" id="nem-tr-a7r"/>
+                            <constraint firstItem="98h-rt-G3h" firstAttribute="leading" secondItem="vCV-sy-9Ih" secondAttribute="trailing" constant="3" id="oBG-hj-ZRP"/>
                             <constraint firstItem="VjN-Vn-f9w" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pDG-1a-qHu"/>
                             <constraint firstItem="Mrn-cs-KWr" firstAttribute="width" secondItem="Mrn-cs-KWr" secondAttribute="height" multiplier="1:1" id="th1-0U-IFn"/>
                             <constraint firstItem="0ap-8K-zmu" firstAttribute="bottom" secondItem="rqA-B9-fMi" secondAttribute="bottom" id="vVV-ms-wda"/>
@@ -217,8 +232,10 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="JJ6-1H-2eP"/>
+                                <exclude reference="Uqb-PC-CuD"/>
                                 <exclude reference="FLb-7r-XBS"/>
                                 <exclude reference="N0s-Md-6WI"/>
+                                <exclude reference="QDk-Me-Bld"/>
                                 <exclude reference="1CP-X0-0vo"/>
                                 <exclude reference="aDH-WY-4fg"/>
                             </mask>
@@ -243,6 +260,7 @@
         <image name="error_icon" width="300" height="300"/>
         <image name="info_icon" width="300" height="300"/>
         <image name="plus_icon" width="300" height="300"/>
+        <image name="profile" width="300" height="300"/>
         <image name="safe_travels_no_background" width="112" height="89"/>
     </resources>
 </document>
