--- a/ios/Travel Safety/Modals/InfoViewController.xib
+++ b/ios/Travel Safety/Modals/InfoViewController.xib
@@ -42,23 +42,23 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Safety Feedback" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOW-xq-Vid">
-                    <rect key="frame" x="20" y="261.5" width="280" height="19.5"/>
+                    <rect key="frame" x="20" y="219" width="280" height="19.5"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ast-om-Y9n">
-                    <rect key="frame" x="8" y="281" width="304" height="186"/>
+                    <rect key="frame" x="8" y="238" width="304" height="228.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tourist Safety Index: 75" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xMa-GM-PSk">
-                    <rect key="frame" x="25" y="211" width="285" height="18"/>
+                    <rect key="frame" x="25" y="168" width="285" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crime Index: 35" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HTS-hN-gkB">
-                    <rect key="frame" x="25" y="230.5" width="285" height="18"/>
+                    <rect key="frame" x="25" y="188" width="285" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -70,48 +70,46 @@
                         <constraint firstAttribute="height" constant="22" id="Dzi-Uc-F9w"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expert Review" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IXN-Tp-1Qk">
-                    <rect key="frame" x="20" y="95" width="280" height="19.5"/>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nzf-tW-WbQ">
-                    <rect key="frame" x="20" y="112.5" width="280" height="60"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="60" id="eYZ-4c-Hl8"/>
-                    </constraints>
-                    <string key="text">Expert review goes here.  Expert review goes here.  Expert review goes here.  Expert review goes here.  Expert review goes here.  </string>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                </textView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important Statistics" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOy-19-rgb">
-                    <rect key="frame" x="20" y="185.5" width="280" height="19.5"/>
+                    <rect key="frame" x="20" y="143" width="280" height="19.5"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oEn-eq-j0v">
+                    <rect key="frame" x="30" y="95" width="260" height="40"/>
+                    <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="Px1-JM-8Fb"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                    <state key="normal" title="View Expert Review">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="viewExpertReview:" destination="-1" eventType="touchUpInside" id="fpg-fz-O59"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="xMa-GM-PSk" secondAttribute="trailing" constant="10" id="1FZ-xW-mDw"/>
                 <constraint firstAttribute="trailing" secondItem="vOy-19-rgb" secondAttribute="trailing" constant="20" id="1Ov-4O-j4C"/>
-                <constraint firstItem="nzf-tW-WbQ" firstAttribute="top" secondItem="IXN-Tp-1Qk" secondAttribute="bottom" constant="-2" id="2YB-Fp-VnU"/>
+                <constraint firstItem="oEn-eq-j0v" firstAttribute="top" secondItem="e9J-R1-UES" secondAttribute="bottom" constant="8" id="1Tv-yI-toh"/>
                 <constraint firstItem="e9J-R1-UES" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="78G-2h-UkT"/>
                 <constraint firstItem="e9J-R1-UES" firstAttribute="top" secondItem="rM1-rS-Vxv" secondAttribute="bottom" constant="5" id="7RD-En-x2f"/>
                 <constraint firstItem="ytP-dz-D4J" firstAttribute="top" secondItem="BNu-TA-70N" secondAttribute="bottom" constant="8" id="9RF-yJ-HuI"/>
-                <constraint firstItem="vOy-19-rgb" firstAttribute="top" secondItem="nzf-tW-WbQ" secondAttribute="bottom" constant="13" id="9TB-CR-XMt"/>
                 <constraint firstAttribute="trailingMargin" secondItem="Ast-om-Y9n" secondAttribute="trailing" id="9bu-wm-K81"/>
                 <constraint firstItem="xMa-GM-PSk" firstAttribute="leading" secondItem="HTS-hN-gkB" secondAttribute="leading" id="FIi-Ya-dKP"/>
+                <constraint firstItem="oEn-eq-j0v" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Fwb-Pm-r5f"/>
                 <constraint firstItem="HTS-hN-gkB" firstAttribute="trailing" secondItem="xMa-GM-PSk" secondAttribute="trailing" id="GFV-Ca-Pre"/>
+                <constraint firstItem="vOy-19-rgb" firstAttribute="top" secondItem="oEn-eq-j0v" secondAttribute="bottom" constant="8" id="H2O-Dm-9yg"/>
                 <constraint firstItem="BNu-TA-70N" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="H9j-ve-yeJ"/>
                 <constraint firstItem="xMa-GM-PSk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="25" id="Ltc-Oa-6Eq"/>
                 <constraint firstItem="BNu-TA-70N" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OWO-CL-Nuj"/>
                 <constraint firstItem="UOW-xq-Vid" firstAttribute="leading" secondItem="vOy-19-rgb" secondAttribute="leading" id="PbK-tw-ct2"/>
                 <constraint firstItem="HTS-hN-gkB" firstAttribute="top" secondItem="xMa-GM-PSk" secondAttribute="bottom" constant="2" id="RrW-7T-fnA"/>
                 <constraint firstItem="UOW-xq-Vid" firstAttribute="top" secondItem="vOy-19-rgb" secondAttribute="bottom" constant="100" id="TCF-re-LJB"/>
-                <constraint firstItem="nzf-tW-WbQ" firstAttribute="leading" secondItem="IXN-Tp-1Qk" secondAttribute="leading" id="TQ5-Fd-VMM"/>
                 <constraint firstAttribute="trailingMargin" secondItem="e9J-R1-UES" secondAttribute="trailing" id="USW-no-6Ae"/>
                 <constraint firstItem="rM1-rS-Vxv" firstAttribute="width" secondItem="ytP-dz-D4J" secondAttribute="width" id="Ucs-sv-gBx"/>
                 <constraint firstItem="rM1-rS-Vxv" firstAttribute="centerY" secondItem="ytP-dz-D4J" secondAttribute="centerY" id="Xu7-PE-2x2"/>
@@ -120,10 +118,8 @@
                 <constraint firstItem="ytP-dz-D4J" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="btt-Lx-kjo"/>
                 <constraint firstAttribute="trailing" secondItem="rM1-rS-Vxv" secondAttribute="trailing" constant="20" id="cdy-Jt-jX7"/>
                 <constraint firstItem="UOW-xq-Vid" firstAttribute="top" secondItem="HTS-hN-gkB" secondAttribute="bottom" constant="13" id="eep-8e-jYa"/>
-                <constraint firstItem="IXN-Tp-1Qk" firstAttribute="leading" secondItem="vOy-19-rgb" secondAttribute="leading" id="fFo-83-yIB"/>
-                <constraint firstItem="vOy-19-rgb" firstAttribute="trailing" secondItem="IXN-Tp-1Qk" secondAttribute="trailing" id="fLh-Pd-9PW"/>
                 <constraint firstAttribute="bottomMargin" secondItem="Ast-om-Y9n" secondAttribute="bottom" constant="5" id="fle-vA-Efc"/>
-                <constraint firstItem="nzf-tW-WbQ" firstAttribute="trailing" secondItem="IXN-Tp-1Qk" secondAttribute="trailing" id="gIR-Dd-CAj"/>
+                <constraint firstAttribute="trailing" secondItem="oEn-eq-j0v" secondAttribute="trailing" constant="30" id="gxV-cI-M28"/>
                 <constraint firstAttribute="trailing" secondItem="rM1-rS-Vxv" secondAttribute="trailing" constant="20" id="iqJ-Jr-t14"/>
                 <constraint firstItem="xMa-GM-PSk" firstAttribute="top" secondItem="vOy-19-rgb" secondAttribute="bottom" constant="6" id="n6D-1t-Q0d"/>
                 <constraint firstItem="rM1-rS-Vxv" firstAttribute="top" secondItem="ytP-dz-D4J" secondAttribute="bottom" constant="2" id="oFX-Wl-ctR"/>
@@ -131,7 +127,6 @@
                 <constraint firstItem="rM1-rS-Vxv" firstAttribute="trailing" secondItem="BNu-TA-70N" secondAttribute="trailing" id="rM7-dX-O4I"/>
                 <constraint firstItem="vOy-19-rgb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="sit-GE-dz9"/>
                 <constraint firstItem="Ast-om-Y9n" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="sjb-0M-Tiw"/>
-                <constraint firstItem="IXN-Tp-1Qk" firstAttribute="top" secondItem="e9J-R1-UES" secondAttribute="bottom" constant="8" id="vmZ-Xg-NLH"/>
                 <constraint firstItem="Ast-om-Y9n" firstAttribute="top" secondItem="UOW-xq-Vid" secondAttribute="bottom" id="xqG-cP-1Y6"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
