--- a/ios/Travel Safety/Views/StarSelectView.xib
+++ b/ios/Travel Safety/Views/StarSelectView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOJ-c8-5Vq" userLabel="star1">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOJ-c8-5Vq" userLabel="star1">
                     <rect key="frame" x="31" y="0.0" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="SOJ-c8-5Vq" secondAttribute="height" multiplier="1:1" id="Hxg-gx-mfp"/>
@@ -30,15 +30,15 @@
                         <action selector="star1Touched:" destination="-1" eventType="touchUpInside" id="P5p-U2-aGh"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y1r-m5-Gmd" userLabel="star2">
-                    <rect key="frame" x="86" y="0.0" width="49.5" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y1r-m5-Gmd" userLabel="star2">
+                    <rect key="frame" x="86" y="0.0" width="50" height="50"/>
                     <state key="normal" backgroundImage="star"/>
                     <connections>
                         <action selector="star2Touched:" destination="-1" eventType="touchUpInside" id="PwD-1o-CpX"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2OQ-wm-qtO" userLabel="star3">
-                    <rect key="frame" x="140.5" y="0.0" width="50" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2OQ-wm-qtO" userLabel="star3">
+                    <rect key="frame" x="141" y="0.0" width="50" height="50"/>
                     <state key="normal" backgroundImage="star"/>
                     <connections>
                         <action selector="star3Touched:" destination="-1" eventType="touchUpInside" id="lzK-LB-k6H"/>
@@ -54,8 +54,8 @@
                         <action selector="star5Touched:" destination="-1" eventType="touchUpInside" id="Wzg-i1-Jgb"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32R-Tc-akD" userLabel="star4">
-                    <rect key="frame" x="195.5" y="0.0" width="49.5" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="32R-Tc-akD" userLabel="star4">
+                    <rect key="frame" x="196" y="0.0" width="49" height="50"/>
                     <state key="normal" backgroundImage="star"/>
                     <connections>
                         <action selector="star4Touched:" destination="-1" eventType="touchUpInside" id="hnt-Ce-fep"/>
